Add some text to report

--- a/Report/SSCR_project_main.tex
+++ b/Report/SSCR_project_main.tex
@@ -4,6 +4,7 @@
 \input{\home/Modules/ChapterStyle}
 \input{\home/Modules/HeaderAndFooter}
 \input{\home/Modules/Paragraph}
+\input{\home/Modules/Figure}
 
 \begin{document}
 \title{Self Service Cash Register}
@@ -12,8 +13,12 @@
 \maketitle
 \makeHeaderAndFooter{Ren\'e Nilsson}
 
-\input{Introduction}
+\tableofcontents
 
+\input{Introduction}
+\input{Requirements}
+\input{Design}
+\input{Implementation}
 
 
 \end{document}
