--- a/Report/Introduction.tex
+++ b/Report/Introduction.tex
@@ -1,2 +1,7 @@
+%!TEX root = SSCR_project_main.tex
 \chapter{Introduction}
-This document...
+This document describes the modeling of a Self Service Cash Register system, using VDM++.
+Such a system is already know in some grocery stores. 
+The main principle is that a customer should be able to scan and pay for his groceries, without the need for any personel.
+
+From the customers point of view, such a system consist of a touch screen, a barcode scanner, and some payment method, such as a credit card terminal, or a terminal for coins and bills.
