Add class and test descriptions

--- a/Report/Introduction.tex
+++ b/Report/Introduction.tex
@@ -5,3 +5,5 @@ Such a system is already know in some grocery stores.
 The main principle is that a customer should be able to scan and pay for his groceries, without the need for any personel.
 
 From the customers point of view, such a system consist of a touch screen, a barcode scanner, and some payment method, such as a credit card terminal, or a terminal for coins and bills.
+
+\section{Purpose of the model}
