--- a/Report/SSCR_project_main.tex
+++ b/Report/SSCR_project_main.tex
@@ -6,7 +6,7 @@
 
 \input{\home/Modules/ChapterStyle}
 \input{\home/Modules/HeaderAndFooter}
-\input{\home/Modules/Paragraph}
+%\input{\home/Modules/Paragraph}
 \input{\home/Modules/Figure}
 
 \begin{document}
