--- a/Report/Test.tex
+++ b/Report/Test.tex
@@ -2,9 +2,106 @@
 \chapter{Test}\label{chp:Test}
 
 \section{Proof Obligations}
+The automatic proof obligation generator in Overture was used, to check the system for missing preconditions.
+
+\section{Functional test}
+The Environment class models all inputs to the system. A sequence of different inputs is used to test the system functionality and thereby verify the functional requirements. The Run operation that describes this sequence is shown below. It contains three scenarios, which verifies all the requirements.
+\begin{vdmpp}
+ public Run:() ==> ()
+ Run() ==
+ (
+ -- Standard run with cash:
+  screen.StartPayment();
+  scanner.ScanBarcode(2);
+  screen.AddMultiple(3); -- Add three products with barcode 2 (Milk), instead of one.
+  scanner.ScanBarcode(4);
+  scanner.ScanBarcode(7);
+  scanner.ScanBarcode(11); --Invalid barcode
+  
+  cabTerm.PutInMoney(100); -- not enough
+  screen.PayCash();
+  cabTerm.PutInMoney(200);
+  screen.PayCash();
+ 
+ -- Cancel payment run: 
+  screen.StartPayment();
+  scanner.ScanBarcode(4);
+  scanner.ScanBarcode(7);
+  screen.CancelPayment(); 
+ 
+ -- Standard run with credit card:
+  screen.StartPayment();
+  scanner.ScanBarcode(1);
+  scanner.ScanBarcode(5);
+  scanner.ScanBarcode(6);
+  scanner.ScanBarcode(8);
+  scanner.ScanBarcode(9);
+  scanner.ScanBarcode(10);
+  
+  screen.PayCredit();
+ )
+\end{vdmpp}
+
+\subsection{Model coverage}
+Using the built-in coverage and \LaTeX \hspace{2pt}functionality in Overture, it is verified that the test coverage of the model is 100\% in all classes.
 
 
 \section{Combinatorial Test}
+The Environment class also contains a \textbf{traces} section. This section is used for combinatorial testing. Four different tests have been made. Three of these test payment and canceling payment of different combinations of products. 
+
+The last test deliberately creates a precondition failure, to show how such an error is display in Overture. 
+
+\begin{vdmpp}
+
+traces
+
+PayWithCredit: 
+ let myBarcodes in set dom CR`cashRegister.databaseProducts
+ in
+  let myBarcodes2 in set dom CR`cashRegister.databaseProducts
+  in
+  (
+   screen.StartPayment();
+   scanner.ScanBarcode(myBarcodes){1};
+   scanner.ScanBarcode(myBarcodes2){1,3};
+   screen.PayCredit()
+  );
 
 
-\section{Functional test}
+PayWithCash: 
+ let myBarcodes in set dom CR`cashRegister.databaseProducts
+ in
+  let myBarcodes2 in set dom CR`cashRegister.databaseProducts
+  in
+  (
+   screen.StartPayment();
+   scanner.ScanBarcode(myBarcodes){1};
+   scanner.ScanBarcode(myBarcodes2){1,3};
+   cabTerm.PutInMoney(500);
+   screen.PayCash()
+  );
+       
+AddingAndEmptyingBasket: 
+ let myBarcodes in set dom CR`cashRegister.databaseProducts
+ in
+  let myBarcodes2 in set dom CR`cashRegister.databaseProducts
+  in
+   let mult in set {1,...,4}
+   in
+   (
+    screen.StartPayment();
+    scanner.ScanBarcode(myBarcodes){1};
+    screen.AddMultiple(mult);
+    scanner.ScanBarcode(myBarcodes2){1,3};
+    screen.CancelPayment()
+   );
+   
+preconditionFail:
+ let mult = 1
+  in
+  (
+   screen.StartPayment();
+   screen.AddMultiple(mult)
+  );
+\end{vdmpp}
+
