--- a/Report/Conclusion.tex
+++ b/Report/Conclusion.tex
@@ -1,2 +1,11 @@
 %!TEX root = SSCR_project_main.tex
 \chapter{Conclusion}
+The created model cover all the required functionality, and tests the main scenarios in different combinations. The model contains a lot of the basic VDM++ constructs, which was also part of purpose.
+\newline
+
+\noindent
+Some parts of the model are more abstract than others, and might be modified with more details. 
+\newline
+
+\noindent
+The model does not take concurrency into account. This might be necessary, depending on how each part is realized.
