--- a/Report/Introduction.tex
+++ b/Report/Introduction.tex
@@ -1,9 +1,13 @@
 %!TEX root = SSCR_project_main.tex
 \chapter{Introduction}
-This document describes the modeling of a Self Service Cash Register system, using VDM++.
-Such a system is already know in some grocery stores. 
-The main principle is that a customer should be able to scan and pay for his groceries, without the need for any personel.
+This document describes the modeling of a Self Service Cash Register system, using VDM++ and the tool Overture.
+Self Service Cash Register systems is already know in some grocery stores, and has been the inspiration for this project.
+The main principle is that a customer should be able to scan and pay for his groceries, without the need for any personnel.
 
-From the customers point of view, such a system consist of a touch screen, a barcode scanner, and some payment method, such as a credit card terminal, or a terminal for coins and bills.
 
-\section{Purpose of the model}
+From the customers point of view, such a system consist of a touch screen, a barcode scanner, and some payment method, such as a credit card terminal, or a terminal for coins and bills. These parts will be modeled in an abstract way, so that the test scenarios can be understood even by a regular customer. This means that the presentation of a final model will be easier and not require that the domain expert have a big knowledge about VDM++.
+
+\section{Purpose}
+The purpose of the model is to create a simple abstract model of the system, which could be used to check the system design for errors.
+
+The purpose of the creation of this model is also, to get a better understanding of the basic VDM++ syntax and the different constructs, that the language makes available.
