--- a/Report/Requirements.tex
+++ b/Report/Requirements.tex
@@ -1,6 +1,6 @@
 %!TEX root = SSCR_project_main.tex
 \chapter{Requirements}
-The system should be able to fulfill the following requirements:
+The main requirement of the system is quite simple; The customer should be able to buy groceries without help from any personnel. This requirement is split into five smaller more detailed requirements:
 
 \begin{enumerate}[label=R.\arabic*:]
 \item The customer should be able to scan products with barcodes.
@@ -9,3 +9,6 @@ The system should be able to fulfill the following requirements:
 \item The customer should be able to cancel a payment.
 \item The system should print a receipt, when all groceries have been payed for.
 \end{enumerate}
+
+\section{Delimitation}
+When customers buy alcoholic beverage, they shall show picture identification. This is not possible in this system, since it requires some sort of personnel interaction. Therefore this is not a requirement.
